--- a/estilo.css
+++ b/estilo.css
@@ -8,7 +8,7 @@
 
   /* Add styles for the header */
   header {
-    background-color: black;
+    background-color: red;
     padding: 0.2px;
     font-family: Book Antiqua;
     
