--- a/estilo.css
+++ b/estilo.css
@@ -21,6 +21,7 @@
     padding: 0.2px;
     display: flex;
     justify-content: center;
+    backgroud-color: gray;
   
   }
 
@@ -31,7 +32,7 @@
   /* Add styles for the links in the navigation menu */
   nav a {
     text-decoration: underline;
-    color: blue;
+    color: white;
   }
 
   /* Add styles for the main content */
@@ -42,7 +43,7 @@
 
   /* Add styles for the footer */
   footer {
-    background-color: lightblue;
+    background-color: blue;
     padding: 0.1px;
     text-align: center;
     font-family: Arial;
