--- a/estilo.css
+++ b/estilo.css
@@ -8,7 +8,7 @@
 
   /* Add styles for the header */
   header {
-    background-color:blue;
+    background-color:purple;
     padding: 0.2px;
     font-family: Book Antiqua;
     
@@ -21,7 +21,7 @@
     padding: 0.2px;
     display: flex;
     justify-content: center;
-    backgroud-color: gray;
+    backgroud-color:white;
   
   }
 
