--- a/estilo.css
+++ b/estilo.css
@@ -43,7 +43,7 @@
 
   /* Add styles for the footer */
   footer {
-    background-color: blue;
+    background-color:purple;
     padding: 0.1px;
     text-align: center;
     font-family: Arial;
