--- a/estilo.css
+++ b/estilo.css
@@ -21,7 +21,7 @@
     padding: 0.2px;
     display: flex;
     justify-content: center;
-    backgroud-color:white;
+    backgroud-color: black;
   
   }
 
