--- a/estilo.css
+++ b/estilo.css
@@ -33,7 +33,7 @@
   /* Add styles for the links in the navigation menu */
   nav a {
     text-decoration: underline;
-    color: white;
+    color: black;
   }
 
   /* Add styles for the main content */
