--- a/estilo.css
+++ b/estilo.css
@@ -1,53 +1,57 @@
 <style>
   /* Add styles for the body */
   body {
-    font-family: Calibri;
+    font-family: Garamond;
     margin: 0;
     padding: 0;
   }
 
   /* Add styles for the header */
   header {
-    background-color:black;
+    background-color: #aeeca8;
     padding: 0.2px;
-    font-family: Book Antiqua;
-    
+    font-family: Comic Sans MS, serif;
+    color: white;
+   
   }
 
-  /* Add styles for the navigation menu */
+  /* Add styles for the navigation menu */  
   nav ul {
     list-style: none;
     margin: 0;
     padding: 0.2px;
     display: flex;
     justify-content: center;
-    background-color: purple;
-  
+    background-color: #aeeca8;  
+    font-family: Comic Sans MS, serif;
+ 
   }
 
   nav li {
-    margin: 0 5px;
-   }
-  nav a {
-    font-family: Calibri;
-    font-size: 18px;
-    text-decoration: underline;
-    color: white;
+    margin: 0 30px;
   }
 
+  /* Add styles for the links in the navigation menu */
+  nav a {
+    text-decoration: underline;
+    color: white;
+    font-family: Comic Sans MS, serif;
+  }
+
+  /* Add styles for the main content */
   main {
-    padding: 0px; 
+    padding: 0px;
     text-align: center;
-    font-size: 10px
-    }
+    background-color: white;
+  }
 
-
-  /* Add styles for the footer * 5
+  /* Add styles for the footer */
   footer {
-    background-color: purple;
+    background-color: white;
     padding: 0.1px;
     text-align: center;
-    font-family: Arial;
-    font-size: 10px;
+    font-family: Comic Sans MS, serif;;
+    font-size: 15px;
+    color: white;
   }
 </style>
