--- a/youtubelinks/youtubelinks_estilo.css
+++ b/youtubelinks/youtubelinks_estilo.css
@@ -1,7 +1,7 @@
 <style>
   /* Add styles for the body */
   body {
-    font-family: Calibri;
+    font-family: Garamond;
     margin: 0;
     padding: 0;
   }
@@ -10,7 +10,8 @@
   header {
     background-color: black;
     padding: 0.2px;
-    font-family: Book Antiqua;
+    font-family: Comic sans Ms, serif;
+    color:white;
     
   }
 
@@ -21,31 +22,36 @@
     padding: 0.2px;
     display: flex;
     justify-content: center;
+    backgroud-color:#aeeca8;
+    font-family:Comic sans Ms, serif;
   
   }
 
   nav li {
-    margin: 0 10px;
+    margin: 0.30px;
   }
 
   /* Add styles for the links in the navigation menu */
   nav a {
     text-decoration: underline;
-    color: blue;
+    color: white;
+    font-family: Comic Sans Ms, serif;
   }
 
   /* Add styles for the main content */
   main {
-    padding: 0px;
+    padding: 2px;
     text-align: center;
+    background-color: green;
   }
 
   /* Add styles for the footer */
   footer {
-    background-color: lightblue;
+    background-color: green;
     padding: 0.1px;
     text-align: center;
-    font-family: Arial;
+    font-family: Comic Sans Ms, serif;
     font-size: 15px;
+    color: white;
   }
 </style>
